8151670: Unexpected concurrent refinement deactivation and reactivation

Refinement threads now use SuspendibleThreadSet::yield.

Reviewed-by: jmasa, mgerdin